# OaaS-IoT

./: .dockerignore  Cargo.toml  docker-compose.build.yml  justfile
.github/workflows/: platform-container-build.yml
commons/oprc-config/src/: validation.rs
commons/oprc-dp-storage/src/: any_storage.rs
commons/oprc-grpc/: build.rs
commons/oprc-grpc/proto/: common.proto  deployment_types.proto  netsim.proto  oprc-data.proto
commons/oprc-grpc/src/: lib.rs  tracing.rs
commons/oprc-invoke/src/: handler.rs  lib.rs  proxy.rs  route.rs  serde.rs
commons/oprc-models/bindings/: OClass.ts  OdgmDataSpec.ts
commons/oprc-models/src/: deployment.rs  enums.rs  nfr.rs  package.rs
commons/oprc-netsim/: Cargo.toml
commons/oprc-netsim/src/: lib.rs  proxy.rs  state.rs  types.rs  zrpc_types.rs
commons/oprc-test-utils/src/: k8s.rs
commons/oprc-zenoh/src/: lib.rs  pool.rs
commons/oprc-zrpc/src/: client.rs
control-plane/oprc-crm/: Cargo.toml
control-plane/oprc-crm/src/: collections.rs  runtime.rs
control-plane/oprc-crm/tests/: analyzer_wiremock.rs  it_controller.rs
control-plane/oprc-pm/: Cargo.toml
control-plane/oprc-pm/src/: bootstrap.rs  server.rs
control-plane/oprc-pm/tests/: api_grpc_integration_tests.rs  features_multicluster_policy_tests.rs  gateway_proxy_tests.rs  it_pm_crm.rs
data-plane/oprc-dev/src/: lib.rs
data-plane/oprc-odgm/: Cargo.toml  ODGM_ARCHITECTURE.md
data-plane/oprc-odgm/benches/: bench_wasm_runtime.rs
data-plane/oprc-odgm/src/: cluster.rs  collection_helpers.rs  granular_key.rs  lib.rs  wasm_bridge.rs
data-plane/oprc-odgm/tests/: event_v2_basic_test.rs  event_v2_create_update_delete_test.rs  event_v2_empty_batch_noop_test.rs  event_v2_fanout_summary_test.rs  event_v2_mixed_batch_actions_test.rs  event_v2_mixed_key_batch_test.rs  event_v2_mutation_source_test.rs  event_v2_ordering_monotonicity_test.rs  event_v2_trigger_failure_metrics_test.rs  event_v2_zenoh_publish_test.rs  mutation_context_test.rs  (+3 more)
data-plane/oprc-router/: Cargo.toml
data-plane/oprc-router/src/: main.rs  netsim.rs
docs/: DEV_SERVER_DESIGN.md
docs/WIP/: WEBSOCKET_IMPLEMENTATION.md
k8s/crds/: classruntimes.gen.yaml
k8s/example/: pixel-canvas.yaml
tests/pixel-canvas-e2e/: oaas-package.yaml  pixel-canvas.yaml  run.sh
tests/wasm-guest-ts-counter/: package.json
tools/oprc-cli/: Cargo.toml  build.rs
tools/oprc-compiler/: package.json
tools/oprc-dev-server/: Cargo.toml
tools/pixel-canvas/: Dockerfile  README.md  justfile  nginx.conf.template  package-lock.json  package.json
tools/pixel-canvas/wasm-guest-rs/: Cargo.toml
tools/pixel-canvas/wasm-guest-rs/src/: lib.rs
(+127 files in other folders)
