[package]
name = "oprc-router"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["network-sim"]
network-sim = ["dep:oprc-netsim", "dep:oprc-zrpc", "dep:async-trait", "dep:anyhow"]

[dependencies]
envconfig = {workspace = true}
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zenoh-config={workspace = true}
zenoh = {workspace = true}
oprc-zenoh = {workspace = true}
num_cpus = {workspace = true}

# Optional: network simulation
oprc-netsim = { workspace = true, features = ["zrpc"], optional = true }
oprc-zrpc = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }