[package]
name = "pixel-canvas-wasm-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.component]
package = "oaas:odgm"
target = "../../../data-plane/oprc-wasm/wit"
